--- a/gfxtest/.vscode/launch.json
+++ b/gfxtest/.vscode/launch.json
@@ -1,1 +1,34 @@
+// AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
+//
+// PIO Unified Debugger
+//
+// Documentation: https://docs.platformio.org/page/plus/debugging.html
+// Configuration: https://docs.platformio.org/page/projectconf/section_env_debug.html
 
+{
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug",
+            "executable": "E:/embedded/vs_code/PlatformIO/proj/gfxtest/.pio/build/gen4iod/firmware.elf",
+            "projectEnvName": "gen4iod",
+            "toolchainBinDir": "C:/Users/marti/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": {
+                "type": "PlatformIO",
+                "task": "Pre-Debug"
+            }
+        },
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug (skip Pre-Debug)",
+            "executable": "E:/embedded/vs_code/PlatformIO/proj/gfxtest/.pio/build/gen4iod/firmware.elf",
+            "projectEnvName": "gen4iod",
+            "toolchainBinDir": "C:/Users/marti/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart"
+        }
+    ]
+}
